--- a/index.html
+++ b/index.html
@@ -6,5 +6,200 @@
     <title>Career Page Assignment</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container-wrapper">
+        <div class="nav-container">
+          <div class="nav-logo">
+            <img src="./img/nav-logo.png" alt="" />
+            <h2>berth</h2>
+          </div>
+          <nav>
+            <ul>
+              <li>Home</li>
+              <li>Features</li>
+              <li>Post A Job</li>
+              <li>Hire Talents</li>
+            </ul>
+          </nav>
+          <div class="nav-reg">
+            <button>Login</button> <button class="btn-active">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- hero section start -->
+      <section id="hero">
+        <div class="container-wrapper">
+          <div class="hero-container">
+            <div class="hero-content">
+              <div class="hero-content-title">
+                <h2>Find the right job for you</h2>
+              </div>
+              <div class="hero-content-pra">
+                <p>
+                  Search and find your dream job is now easier than ever. Just
+                  browse a job and apply if you need to.
+                </p>
+              </div>
+              <button class="hero-btn">Get Started</button>
+            </div>
+            <div class="hero-img">
+              <div class="hero-img-1"><img src="./img/SHape.png" alt="" /></div>
+              <div class="hero-img-2">
+                <img src="./img/hero.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- hero section end -->
+      <section id="ass-with">
+        <div class="container-wrapper">
+          <div class="ass-title"><h3>Associated with</h3></div>
+          <div class="ass-with">
+            <div class="ass-with-item">
+              <img src="./img/Group1.png" alt="" />
+            </div>
+            <div class="ass-with-item">
+              <img src="./img/Group2.png" alt="" />
+            </div>
+            <div class="ass-with-item">
+              <img src="./img/Group3.png" alt="" />
+            </div>
+            <div class="ass-with-item">
+              <img src="./img/Group4.png" alt="" />
+            </div>
+            <div class="ass-with-item">
+              <img src="./img/Group5.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- How it works section  -->
+      <section>
+        <div class="container-wrapper">
+          <div>
+            <div>
+              <h2 class="works-title">How it works</h2>
+              <p class="works-title-pra">
+                Search and find your dream job is now easier than ever. Just
+                browse a job and apply if you need to.
+              </p>
+            </div>
+            <div class="work-card">
+              <!-- Make a Profile -->
+              <div class="Profile">
+                <div class="Profile-svg">
+                  <svg
+                    width="44"
+                    height="44"
+                    viewBox="0 0 44 44"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    style="margin-top: 20px; margin-left: 24px"
+                  >
+                    <g id="Orion_men">
+                      <path
+                        id="layer1"
+                        d="M34.3754 35.0625C27.5004 33.7563 27.5004 31.625 27.5004 30.25V29.425C29.2455 27.7913 30.4861 25.6918 31.0754 23.375H31.1441C33.2066 23.375 33.7566 19.0438 33.7566 18.3563C33.7566 17.6688 33.8254 15.125 31.6941 15.125C36.1629 2.75004 24.1316 -2.19996 15.0566 4.12504C11.3441 4.12504 11.0004 9.62504 12.3754 15.125C10.2441 15.125 10.3129 17.7375 10.3129 18.3563C10.3129 18.975 10.7941 23.375 12.9254 23.375C13.5147 25.6918 14.7553 27.7913 16.5004 29.425V30.25C16.5004 31.625 16.5004 33.825 9.62539 35.0625C7.70121 35.4027 5.91945 36.3009 4.50156 37.6455C3.08368 38.99 2.09221 40.7216 1.65039 42.625H42.3504C41.8924 40.7294 40.8958 39.0068 39.4808 37.6649C38.0657 36.3231 36.2926 35.4193 34.3754 35.0625Z"
+                        fill="white"
+                      />
+                    </g>
+                  </svg>
+                </div>
+                <div>
+                  <h2>Make a Profile</h2>
+                  <p class="work-card-pra">
+                    Make job profile then Build and boost your great profile
+                    with proper way. It’s so easy to get started.
+                  </p>
+                  <button class="card-btn">Learn More</button>
+                </div>
+              </div>
+              <!-- Upload CV -->
+              <div class="cv">
+                <div class="cv-svg">
+                  <svg
+                    width="44"
+                    height="44"
+                    viewBox="0 0 44 44"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    style="margin-top: 20px; margin-left: 24px"
+                  >
+                    <g id="Orion_open-file">
+                      <path
+                        id="layer2"
+                        d="M17.875 1.375H2.75V38.5H18.3563C17.15 36.4108 16.5147 34.041 16.5141 31.6285C16.5135 29.2161 17.1476 26.8459 18.3527 24.7561C19.5579 22.6663 21.2916 20.9303 23.3799 19.7224C25.4682 18.5146 27.8376 17.8775 30.25 17.875V13.75H17.875V1.375Z"
+                        fill="white"
+                      />
+                      <path
+                        id="layer2_2"
+                        d="M20.625 2.75V11H28.875L20.625 2.75Z"
+                        fill="white"
+                      />
+                      <path
+                        id="layer1"
+                        d="M30.25 20.625C28.0744 20.625 25.9477 21.2701 24.1387 22.4788C22.3298 23.6875 20.9199 25.4055 20.0873 27.4155C19.2548 29.4255 19.0369 31.6372 19.4614 33.771C19.8858 35.9048 20.9334 37.8648 22.4718 39.4032C24.0102 40.9416 25.9702 41.9892 28.104 42.4136C30.2378 42.8381 32.4495 42.6202 34.4595 41.7877C36.4695 40.9551 38.1875 39.5452 39.3962 37.7363C40.6049 35.9273 41.25 33.8006 41.25 31.625C41.25 28.7076 40.0911 25.9097 38.0282 23.8468C35.9653 21.7839 33.1674 20.625 30.25 20.625ZM35.3375 31.2125C35.0805 31.4644 34.7349 31.6056 34.375 31.6056C34.0151 31.6056 33.6695 31.4644 33.4125 31.2125L31.625 29.425V37.125C31.625 37.4897 31.4801 37.8394 31.2223 38.0973C30.9644 38.3551 30.6147 38.5 30.25 38.5C29.8853 38.5 29.5356 38.3551 29.2777 38.0973C29.0199 37.8394 28.875 37.4897 28.875 37.125V29.425L27.0875 31.2125C26.8227 31.4111 26.4952 31.5075 26.165 31.484C25.8349 31.4606 25.5243 31.3188 25.2902 31.0848C25.0562 30.8507 24.9144 30.5401 24.891 30.21C24.8675 29.8798 24.9639 29.5523 25.1625 29.2875L30.25 24.2L35.3375 29.2875C35.5894 29.5445 35.7306 29.8901 35.7306 30.25C35.7306 30.6099 35.5894 30.9555 35.3375 31.2125Z"
+                        fill="white"
+                      />
+                    </g>
+                  </svg>
+                </div>
+                <div>
+                  <h2>Upload CV</h2>
+                  <p class="work-card-pra">
+                    Make job profile then Build and boost your great profile
+                    with proper way. It’s so easy to get started.
+                  </p>
+                  <button class="card-btn activ">Learn More</button>
+                </div>
+              </div>
+              <!-- Schedule Interview -->
+              <div class="Interview">
+                <div class="Interview-svg">
+                  <svg
+                    width="44"
+                    height="44"
+                    viewBox="0 0 44 44"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    style="margin-top: 20px; margin-left: 24px"
+                  >
+                    <g id="Orion_wall-clock" clip-path="url(#clip0_2_288)">
+                      <path
+                        id="layer1"
+                        d="M22 0C17.6488 0 13.3953 1.29028 9.77746 3.70767C6.15958 6.12506 3.33979 9.56099 1.67466 13.581C0.00953218 17.6009 -0.426141 22.0244 0.422734 26.292C1.27161 30.5596 3.36691 34.4796 6.44366 37.5564C9.52042 40.6331 13.4404 42.7284 17.708 43.5773C21.9756 44.4262 26.3991 43.9905 30.419 42.3253C34.439 40.6602 37.875 37.8404 40.2923 34.2225C42.7097 30.6047 44 26.3512 44 22C44 16.1652 41.6822 10.5695 37.5564 6.44365C33.4306 2.31785 27.8348 0 22 0V0ZM21.3125 3.66644C21.3125 3.4841 21.3849 3.30923 21.5139 3.1803C21.6428 3.05137 21.8177 2.97894 22 2.97894C22.1823 2.97894 22.3572 3.05137 22.4861 3.1803C22.6151 3.30923 22.6875 3.4841 22.6875 3.66644V7.33288C22.6875 7.51521 22.6151 7.69008 22.4861 7.81901C22.3572 7.94794 22.1823 8.02038 22 8.02038C21.8177 8.02038 21.6428 7.94794 21.5139 7.81901C21.3849 7.69008 21.3125 7.51521 21.3125 7.33288V3.66644ZM7.33357 22.6875H3.66645C3.48411 22.6875 3.30924 22.6151 3.18031 22.4861C3.05138 22.3572 2.97895 22.1823 2.97895 22C2.97895 21.8177 3.05138 21.6428 3.18031 21.5139C3.30924 21.3849 3.48411 21.3125 3.66645 21.3125H7.33357C7.51591 21.3125 7.69078 21.3849 7.81971 21.5139C7.94864 21.6428 8.02107 21.8177 8.02107 22C8.02107 22.1823 7.94864 22.3572 7.81971 22.4861C7.69078 22.6151 7.51591 22.6875 7.33357 22.6875ZM22.6875 40.3336C22.6875 40.5159 22.6151 40.6908 22.4861 40.8197C22.3572 40.9486 22.1823 41.0211 22 41.0211C21.8177 41.0211 21.6428 40.9486 21.5139 40.8197C21.3849 40.6908 21.3125 40.5159 21.3125 40.3336V36.6664C21.3125 36.4841 21.3849 36.3092 21.5139 36.1803C21.6428 36.0514 21.8177 35.9789 22 35.9789C22.1823 35.9789 22.3572 36.0514 22.4861 36.1803C22.6151 36.3092 22.6875 36.4841 22.6875 36.6664V40.3336ZM34.4623 12.4623L25.8115 21.1138C26.064 21.7222 26.167 22.3823 26.1121 23.0387C26.0571 23.6952 25.8458 24.3289 25.4957 24.8869C25.1456 25.4449 24.667 25.9109 24.0999 26.246C23.5328 26.5811 22.8936 26.7756 22.236 26.813C21.5783 26.8505 20.9213 26.7299 20.3198 26.4613C19.7183 26.1928 19.1898 25.784 18.7787 25.2694C18.3675 24.7547 18.0856 24.1491 17.9565 23.5032C17.8274 22.8572 17.8548 22.1897 18.0366 21.5566L13.2804 17.6646C13.0688 17.4914 12.9345 17.2412 12.9073 16.969C12.8801 16.6968 12.9622 16.425 13.1354 16.2133C13.3086 16.0016 13.5588 15.8674 13.831 15.8402C14.1032 15.813 14.375 15.895 14.5867 16.0683L19.0981 19.7594C19.812 19.0486 20.7621 18.6248 21.768 18.5685C22.7739 18.5122 23.7654 18.8274 24.5541 19.4542L33.0041 11.0041C33.1986 10.8163 33.4591 10.7123 33.7295 10.7147C33.9999 10.717 34.2586 10.8255 34.4498 11.0167C34.641 11.2079 34.7494 11.4665 34.7518 11.7369C34.7541 12.0073 34.6502 12.2678 34.4623 12.4623ZM40.3336 22.6875H36.6664C36.4841 22.6875 36.3092 22.6151 36.1803 22.4861C36.0514 22.3572 35.9789 22.1823 35.9789 22C35.9789 21.8177 36.0514 21.6428 36.1803 21.5139C36.3092 21.3849 36.4841 21.3125 36.6664 21.3125H40.3336C40.5159 21.3125 40.6908 21.3849 40.8197 21.5139C40.9486 21.6428 41.0211 21.8177 41.0211 22C41.0211 22.1823 40.9486 22.3572 40.8197 22.4861C40.6908 22.6151 40.5159 22.6875 40.3336 22.6875Z"
+                        fill="white"
+                      />
+                      <path
+                        id="layer1_2"
+                        d="M22 24.75C23.1391 24.75 24.0625 23.8266 24.0625 22.6875C24.0625 21.5484 23.1391 20.625 22 20.625C20.8609 20.625 19.9375 21.5484 19.9375 22.6875C19.9375 23.8266 20.8609 24.75 22 24.75Z"
+                        fill="white"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_2_288">
+                        <rect width="44" height="44" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <div>
+                  <h2>Schedule Interview</h2>
+                  <p class="work-card-pra">
+                    Make job profile then Build and boost your great profile
+                    with proper way. It’s so easy to get started.
+                  </p>
+                  <button class="card-btn">Learn More</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
