--- a/index.html
+++ b/index.html
@@ -200,6 +200,92 @@
           </div>
         </div>
       </section>
+      <!-- dream job section -->
+      <section>
+        <div class="container-wrapper">
+          <div class="dream-section">
+            <!-- dream content -->
+            <div>
+              <div class="dream-content">
+                <h2 class="dream-content-title">
+                  Find your dream job super fast ever.
+                </h2>
+                <p class="dream-content-pra">
+                  We are here to help jobseekers connect wuth the organizer and
+                  companies. We are providing the best opportunies to
+                  professionals people.
+                </p>
+                <div>
+                  <p class="dream-content-svg">
+                    <svg
+                      width="20"
+                      height="14"
+                      viewBox="0 0 20 14"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        id="Icon"
+                        d="M1 7.72L6.5 13L19 1"
+                        stroke="#8A5CD7"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                    Connect easily with organizers
+                  </p>
+                  <p class="dream-content-svg">
+                    <svg
+                      width="20"
+                      height="14"
+                      viewBox="0 0 20 14"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        id="Icon"
+                        d="M1 7.72L6.5 13L19 1"
+                        stroke="#8A5CD7"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                    Get a job comfortably
+                  </p>
+                  <p class="dream-content-svg">
+                    <svg
+                      width="20"
+                      height="14"
+                      viewBox="0 0 20 14"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        id="Icon"
+                        d="M1 7.72L6.5 13L19 1"
+                        stroke="#8A5CD7"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                    24/7 online support
+                  </p>
+                </div>
+                <button class="dream-btn">Get Started</button>
+              </div>
+            </div>
+            <!-- dream img -->
+            <div>
+              <div class="dream-svg">
+                <img src="./img/Illustration.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
